--- a/package.json
+++ b/package.json
@@ -9,11 +9,6 @@
 		"preview": "vite preview",
 		"test": "vitest"
 	},
-	"dependencies": {
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"zod": "^3.19.1"
-	},
 	"devDependencies": {
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.4.0",
@@ -24,11 +19,19 @@
 		"autoprefixer": "^10.4.12",
 		"jsdom": "^20.0.1",
 		"postcss": "^8.4.18",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"zod": "^3.19.1",
 		"prettier": "^2.7.1",
 		"tailwindcss": "^3.2.0",
 		"typescript": "^4.6.4",
 		"vite": "^3.1.0",
 		"vitest": "^0.23.4"
+	},
+	"peerDependencies": {
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"zod": "^3.19.1"
 	},
 	"prettier": {
 		"printWidth": 95,
